Add facebook-domain-verification meta

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 SACRAMENTO, CA 95831">
 <meta name="data-map" content="5+SANDHILL+CT+,+SACRAMENTO,+CA+95831">
   <meta name="description" content="We are a 501(c)(3) organization advancing community services, education, and direct relief through transparent programs, local partnerships, and measurable outcomes.">
+<meta name="facebook-domain-verification" content="fz8e9gbopp0wvwp0zj7hgc1slggfsr" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
